# tree-sitter-ltn

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  go.sum  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ltn.pc.in
bindings/c/tree_sitter/: tree-sitter-ltn.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ltn/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLTNTests/: TreeSitterLTNTests.swift
bindings/zig/: root.zig
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: sample.ltn
