[package]
name = "tree-sitter-ltn"
description = "A JSON, YAML and TOML alternative based on Lua's Tables."
version = "0.0.0"
authors = ["DylanDoesProgramming664 <dylan20xx@outlook.com>"]
license = "BSD 2"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ltn"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ltn"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
