[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ltn"
description = "A JSON, YAML and TOML alternative based on Lua Tables."
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "ltn"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "DylanDoesProgramming664", email = "dylan20xx@outlook.com" }]
requires-python = ">=3.10"
license.text = "BSD2"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/dylandoesprogramming664/tree-sitter-ltn"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
